# Bernini-Runtime

./: README.md  bootstrap_gradio_pod.sh  bootstrap_runpod.sh  pyproject.toml
scripts/: prefetch_model.py
src/bernini_runtime/: __init__.py  casefile.py  config.py  handler.py  media.py  runner.py
tests/: test_casefile.py  test_payload.py  test_runner_command.py
