[project]
name = "bernini-runtime"
version = "0.1.0"
description = "Runpod serverless runtime for ByteDance Bernini-R"
requires-python = ">=3.10"
dependencies = [
  "huggingface_hub[hf_xet]>=0.36.0",
  "requests>=2.32.0",
  "runpod>=1.7.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
